Drop guava (#67)
* initial removal

* refactorings, documentation, tests

* cleanups

* refactorings

* add additional utility method

* bump guava version

* formatting

* cleanups

* formatting

* extract functionality

* Revert "extract functionality"

This reverts commit de93cd7d61751b7415977c5381bf5a6973bfc247.

* simplify computation